# copy-writer-demo

./: .env.example  .gitignore  README.md  config.yaml  modularity.md  pyproject.toml
.github/workflows/: deploy-pages.yml
data/output_data/: .gitkeep
data/processed_data/: .gitkeep
data/raw_data/: .gitkeep
docs/: index.html
docs/assets/: index-B0kELE47.js  index-BdCQfJRg.js  index-Bh-0DPE1.js  index-BkcLHdCG.css  index-Bl0fep0X.js  index-C-tF8Iuo.css  index-C0nUFSyq.js  index-C5FIY7aP.js  index-CG6w0cxi.js  index-CWG7Y4dU.js  index-CzY4g1u-.css  index-D18TdMy1.css  index-D49OIfjw.css  index-D8kHBdkb.css  index-DAj8ksCY.js  index-DKvwbkhp.js  index-DoS4B1Nc.js  index-GOMApauK.js  index-Uif3ScTC.js  index-XwkkBe3_.css
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: AlignmentScores.jsx  ChannelTabs.jsx  CompactReadability.jsx  CompactScores.jsx  ErrorModal.jsx  ImageUpload.jsx  IterationHistory.jsx  PresetSelector.jsx  QualitativeScores.jsx  ReadabilityGauge.jsx  TextPanel.jsx  ToneModifiers.jsx  VoiceGuide.jsx  VoiceOutputCard.jsx  VoiceSelector.jsx
frontend/src/data/: dimensions.js  presets.js  voiceProfiles.js
frontend/src/pages/: CopyTransformer.jsx  ImageStudio.jsx
frontend/src/styles/: index.css
frontend/tests/: app.spec.js
src/: main.py  models.py  orchestrate.py  probe_llm.py  prompt_registry.py  scoring.py  voices.py
src/utils/: utils.py
taskdocs/: sd_copy_transformer_spec.md
