[project]
name = "project-template"
version = "0.1.0"
description = "Project template"
requires-python = ">=3.12"
dependencies = [
    "polars>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
